# jiepp

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SPECIFICATION.md  vcpkg.json
.github/workflows/: ci.yml
iec_61131-3/samples/: _header.iec  builtin_macros.iec  builtin_macros.piec  conditional.iec  conditional.piec  define.iec  define.piec  error_warning.iec  error_warning.piec  function_macro.iec  function_macro.piec  generic_function.iec  generic_function.piec  ignore.iec  ignore.piec  include.iec  include.piec  logging_macro.iec  logging_macro.piec  platform_switch.iec  platform_switch.piec  pragma.iec  pragma.piec  setline.iec  setline.piec  stringize.iec  stringize.piec  syspath.iec  syspath.piec  token_paste.iec  token_paste.piec  variadic.iec  variadic.piec
iec_61131-3/samples/lib/: _util.iec
src/constfold/: constfold.cpp  constfold.hpp  constfold.l  constfold.y  constfold_internal.hpp
src/core/: builtin_macros.def  directive_handlers.cpp  expand.cpp  expand_ctrl.cpp  expand_helpers.hpp  expand_subst.cpp  preprocessor.cpp  preprocessor.hpp  preprocessor_internal.hpp
src/env/: env.cpp  env.hpp  file_context.cpp  file_context.hpp  issue.cpp  issue.hpp  issue_codes.def  issue_message.cpp  issue_message.hpp  param.cpp  param.hpp  param_constants.hpp  symtab.cpp  symtab.hpp
src/jiepp/: jiepp.cpp  jiepp.hpp  main.cpp  option.cpp  option.hpp
src/loader/: directive_parser.cpp  directive_parser.hpp  directive_table.def  directive_token.cpp  directive_token.def  lexer.cpp  lexer.hpp  lexer_comment.cpp  lexer_helpers.cpp  lexer_helpers.hpp  lexer_literal.cpp  lexer_pragma.cpp  loader.cpp  loader.hpp  token.cpp  token.def  token.hpp
src/macro/: macro.cpp  macro.hpp  macro_builtin.cpp
src/util/: iec_61131-3.cpp  iec_61131-3.hpp  path.cpp  path.hpp  text.cpp  text.hpp
tests/: test_helper.hpp
tests/constfold/: constfold_test_helper.hpp  test_constfold.cpp  test_constfold_arith.cpp  test_constfold_compare.cpp  test_constfold_logical.cpp  test_constfold_shift.cpp
tests/core/: lineno_test_helper.hpp  test_ctrl_directive.cpp  test_ctrl_syntax.cpp  test_directive.cpp  test_has_include.cpp  test_include.cpp  test_lineno.cpp  test_lineno_ctrl.cpp  test_lineno_fmacro.cpp  test_lineno_include.cpp  test_message_directive.cpp  test_nop_directive.cpp  test_pragma_style.cpp  test_preprocess.cpp  test_sandbox.cpp  test_setline.cpp  test_string_directive.cpp
tests/core/test_include/: a.iec  b.iec  circular_a.iec  circular_b.iec  include.iec  include_single.iec
tests/core/test_lineno/: a-b-c.error.iec  a-b-c.iec  a-b.error.iec  a-b.iec  b-c.error.iec  b-c.iec  c.error.iec  c.iec
tests/env/: test_file_context.cpp  test_issue.cpp  test_param.cpp  test_robustness.cpp  test_symtab.cpp
tests/jiepp/: test_jiepp_command.cpp  test_option.cpp  test_smoke.cpp
tests/jiepp/input/: boost.iec  define.iec  function_macro.iec  function_macro_vaargs.iec  if.iec  include.iec  include_double.iec  not_directive.iec  ppoutputpragmastyle_pragma_annotated.iec  stringize_directive.iec  time_option.iec  time_option.time.csv
tests/jiepp/input/D_option/: D_option.iec
tests/jiepp/input/U_option/: U_option_noprior.iec  U_option_warn.iec
tests/jiepp/input/counter_macro/: a.iec  b.iec  counter_macro.iec  counter_macro_include.iec
tests/jiepp/input/dM/: dM.iec  dM_add_definemacros.iec  dM_undef_multiple.iec
tests/jiepp/input/file_macro/: a.iec  b.iec  c.iec  file_macro.iec  file_macro_include.iec  file_macro_line_directive.iec
tests/jiepp/input/include_option/: header.iec  header2.iec  include_option.iec  include_option_missing.error.iec
tests/jiepp/input/include_syspath_option/: include_syspath_option_a.iec  module.iec
tests/jiepp/input/include_with_syspath_directive/: include_with_syspath_directive_x_tag.iec
tests/jiepp/input/line_macro/: a.iec  b.iec  c.iec  line_macro.iec  line_macro_fmacro.iec  line_macro_include.iec  line_macro_omacro.iec
tests/jiepp/input/max_include_depth_directive/: depth_0.iec  depth_1.iec  depth_2.iec  max_include_depth_directive_3_1.iec  max_include_depth_directive_3_2.iec  max_include_depth_directive_3_3.iec  max_include_depth_directive_3_4.error.iec  max_include_depth_directive_sinclude_3_1.iec  max_include_depth_directive_sinclude_3_2.iec  max_include_depth_directive_sinclude_3_3.iec  max_include_depth_directive_sinclude_3_4.error.iec
tests/jiepp/input/max_include_depth_option/: max_include_depth_option_include1.iec  max_include_depth_option_include2.iec  max_include_depth_option_include3.error.iec
tests/jiepp/input/remove_comments_option/: remove_comments_option_off.iec
tests/jiepp/input/sinclude_with_syspath_directive/: sinclude_with_syspath_directive_a.iec  sinclude_with_syspath_directive_a_x.iec  sinclude_with_syspath_directive_none.error.iec  sinclude_with_syspath_directive_x.iec  sinclude_with_syspath_directive_x_a.iec  sinclude_with_syspath_directive_x_double.iec  sinclude_with_syspath_directive_x_single.iec  sinclude_with_syspath_directive_x_tag.iec
tests/jiepp/output/: boost.d  boost.piec  define.d  define.piec  function_macro.d  function_macro.piec  function_macro_vaargs.d  function_macro_vaargs.piec  if.d  if.piec  include.d  include.piec  include_double.d  include_double.piec  include_single.d  include_single.piec  none.d  none.piec  not_directive.d  not_directive.piec  ppoutputpragmastyle_pragma_annotated.d  ppoutputpragmastyle_pragma_annotated.piec  ppoutputpragmastyle_pragma_standard.d  ppoutputpragmastyle_pragma_standard.piec  stringize_directive.d  stringize_directive.piec
tests/jiepp/output/D_option/: D_option.d  D_option.piec
tests/loader/: test_directive_parser.cpp  test_lexer.cpp  test_lexer_comment.cpp  test_lexer_literal.cpp  test_lexer_pragma.cpp  test_token.cpp  test_tokenize_directive.cpp
tests/macro/: test_defined.cpp  test_functionmacro.cpp  test_glue.cpp  test_macro.cpp  test_objectmacro.cpp  test_stringize.cpp  test_vaargs.cpp
tests/util/: test_iec_61131-3.cpp  test_util.cpp
tools/: pp_iec61131-3_samples.ps1
(+96 files in other folders)
